==> belal221b/AUTOSAR-DIO-driver_AVR-ATmega32/Dio/Dio.c <==
#include "Dio.h"
#include "Dio_Regs.h"
#include "../Det_Driver/Det.h"

void Dio_Init(const Dio_ConfigType *ConfigPtr) {
#if (DIO_DEV_ERROR_DETECT == STD_ON)
	/* check if the input configuration pointer is not a NULL_PTR */
	if (NULL_PTR == ConfigPtr)
	{
		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID, DIO_INIT_SID,
		     DIO_E_PARAM_CONFIG);
	}
	else
#endif
	{
//	Dio_PortPins = (ConfigPtr->pins); /* address of the first pin structure --> pin[0] */

		if (DIO_NOT_INITIALIZED == Dio_Status) {
			Dio_Status = DIO_INITIALIZED;
			Dio_PortPins = ConfigPtr;
			uint8 pinNum;
			volatile uint8 *Port_Ptr = NULL_PTR;
			
			/* Point to the correct PORT register according to the Port Id stored in the Port_Id member */
			for (uint8 i = 0; i < DIO_CONFIGURED_CHANNLES; ++i) {

				if (Dio_PortPins->pins[i] == NULL_PTR) {
					/* Do Nothing */
				} else {
					switch (Dio_PortPins->pins[i]->Port_Id) {
					case 1:
						Port_Ptr = &PORTA;
						break;
					case 2:
						Port_Ptr = &PORTB;
						break;
					case 3:
						Port_Ptr = &PORTC;
						break;
					case 4:
						Port_Ptr = &PORTD;
						break;
					}

					pinNum = getPinNum(Dio_PortPins->pins[i]->Pin_Id);

					if (Port_Ptr != NULL_PTR) {

						/*Set Pin Direction*/
						if (Dio_PortPins->pins[i]->dir == INPUT) {
							SET_BIT(*Port_Ptr, pinNum);
						} else if (Dio_PortPins->pins[i]->dir == OUTPUT) {
							CLEAR_BIT(*Port_Ptr, pinNum);
						} else {
							/* Do Nothing */
						}

						/*Set Pin Value*/
						if (Dio_PortPins->pins[i]->level == STD_HIGH) {
							SET_BIT(*Port_Ptr, pinNum);
						} else if (Dio_PortPins->pins[i]->level == STD_LOW) {
							CLEAR_BIT(*Port_Ptr, pinNum);
						} else {
							/* Do Nothing */
						}
					} else {
						/* Do Nothing */
					}
				}
			}
		} else {
			/* Do Nothing */
		}
	}
}

void Dio_SetupPortDirection(Dio_PortType Port_Id, Dio_Direction dir) {
	volatile uint8 *Port_Ptr = NULL_PTR;
	boolean error = FALSE;

#if (DIO_DEV_ERROR_DETECT == STD_ON)
	/* Check if the Driver is initialized before using this function */
	if (DIO_NOT_INITIALIZED == Dio_Status)
	{
		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_READ_CHANNEL_SID, DIO_E_UNINIT);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
	/* Check if the used channel is within the valid range */
	if (DIO_CONFIGURED_PORTS <= Port_Id)
	{

		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_SETUP_PORD_DIRECTION_SID, DIO_E_PARAM_INVALID_PORT_ID);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
#endif

	/* Point to the correct PORT register according to the Port Id stored in the Port_Id member */
	switch (Port_Id) {
	case 1:
		Port_Ptr = &DDRA;
		break;
	case 2:
		Port_Ptr = &DDRB;
		break;
	case 3:
		Port_Ptr = &DDRC;
		break;
	case 4:
		Port_Ptr = &DDRD;
		break;
	}
	if (Port_Ptr != NULL_PTR) {
		if (dir == INPUT) {
			*Port_Ptr = dir;
		} else if (dir == OUTPUT) {
			*Port_Ptr = dir;
		} else {
			/* Do Nothing */
		}
	} else {
		/* Do Nothing */
	}
}

void Dio_WritePin(Dio_PortType Port_Id, Dio_PinType Pin_Id,
		Dio_PinLevelType level) {
	volatile uint8 *Port_Ptr = NULL_PTR;

	boolean error = FALSE;

#if (DIO_DEV_ERROR_DETECT == STD_ON)
	/* Check if the Driver is initialized before using this function */
	if (DIO_NOT_INITIALIZED == Dio_Status)
	{
		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_WRITE_CHANNEL_SID, DIO_E_UNINIT);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
	/* Check if the used channel is within the valid range */
	if (DIO_CONFIGURED_CHANNLES <= Pin_Id)
	{

		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_WRITE_CHANNEL_SID, DIO_E_PARAM_INVALID_CHANNEL_ID);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
#endif

	/* In-case there are no errors */
	if(FALSE == error)
	{
	//	uint8 pinId = getPinId(Port_Id, Pin_Id);
		uint8 pinNum = getPinNum(Pin_Id);

		switch (Port_Id) {
		case 1:
			Port_Ptr = &PORTA;
			break;
		case 2:
			Port_Ptr = &PORTB;
			break;
		case 3:
			Port_Ptr = &PORTC;
			break;
		case 4:
			Port_Ptr = &PORTD;
			break;
		}
		if (Port_Ptr != NULL_PTR) {
			if (level == STD_HIGH) {
				SET_BIT(*Port_Ptr, pinNum);
			} else if (level == STD_LOW) {
				CLEAR_BIT(*Port_Ptr, pinNum);
			} else {
				/* Do Nothing */
			}
		} else {
			/* Do Nothing */
		}
	}
}

Dio_LevelType Dio_ReadPin(Dio_PortType Port_Id, Dio_PinType Pin_Id) {
	volatile uint8 *Port_Ptr = NULL_PTR;
	Dio_LevelType output = STD_LOW;
	boolean error = FALSE;

#if (DIO_DEV_ERROR_DETECT == STD_ON)
	/* Check if the Driver is initialized before using this function */
	if (DIO_NOT_INITIALIZED == Dio_Status)
	{
		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_READ_CHANNEL_SID, DIO_E_UNINIT);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
	/* Check if the used channel is within the valid range */
	if (DIO_CONFIGURED_CHANNLES <= Pin_Id)
	{

		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_READ_CHANNEL_SID, DIO_E_PARAM_INVALID_CHANNEL_ID);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
#endif

	/* In-case there are no errors */
	if(FALSE == error)
	{

		/* Point to the correct PORT register according to the Port Id stored in the Port_Id member */

	//	uint8 pinId = getPinId(Port_Id, Pin_Id);
		uint8 pinNum = getPinNum(Pin_Id);

		switch (Port_Id) {
		case 1:
			Port_Ptr = &PORTA;
			break;
		case 2:
			Port_Ptr = &PORTB;
			break;
		case 3:
			Port_Ptr = &PORTC;
			break;
		case 4:
			Port_Ptr = &PORTD;
			break;
		}
		if (Port_Ptr != NULL_PTR) {
			if (GET_BIT(*Port_Ptr, pinNum) == STD_HIGH) {
				output = STD_HIGH;
			} else if (GET_BIT(*Port_Ptr, pinNum) == STD_LOW) {
				output = STD_LOW;
			} else {
				/* Do Nothing */
			}
		} else {
			/* Do Nothing */
		}
	}
    return output;
}

void Dio_WritePort(Dio_PortType Port_Id, Dio_PinLevelType level) {
	volatile uint8 *Port_Ptr = NULL_PTR;
	boolean error = FALSE;

#if (DIO_DEV_ERROR_DETECT == STD_ON)
	/* Check if the Driver is initialized before using this function */
	if (DIO_NOT_INITIALIZED == Dio_Status)
	{
		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_WRITE_CHANNEL_SID, DIO_E_UNINIT);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
	/* Check if the used channel is within the valid range */
	if (DIO_CONFIGURED_PORTS <= Port_Id)
	{

		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_WRITE_PORT_SID, DIO_E_PARAM_INVALID_PORT_ID);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
#endif

	/* In-case there are no errors */
	if(FALSE == error)
	{
		/* Point to the correct PORT register according to the Port Id stored in the Port_Id member */
		switch (Port_Id) {
		case 1:
			Port_Ptr = &PORTA;
			break;
		case 2:
			Port_Ptr = &PORTB;
			break;
		case 3:
			Port_Ptr = &PORTC;
			break;
		case 4:
			Port_Ptr = &PORTD;
			break;
		}
		if (Port_Ptr != NULL_PTR) {
			if (level == STD_HIGH) {
				*Port_Ptr |= level;
			} else if (level == STD_LOW) {
				*Port_Ptr |= level;
			} else {
				/* Do Nothing */
			}
		} else {
			/* Do Nothing */
		}
	}
}

Dio_PortLevelType Dio_ReadPort(Dio_PortType Port_Id) {
	Dio_LevelType output = STD_LOW;
	boolean error = FALSE;

#if (DIO_DEV_ERROR_DETECT == STD_ON)
	/* Check if the Driver is initialized before using this function */
	if (DIO_NOT_INITIALIZED == Dio_Status)
	{
		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_READ_CHANNEL_SID, DIO_E_UNINIT);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
	/* Check if the used channel is within the valid range */
	if (DIO_CONFIGURED_CHANNLES <= Port_Id)
	{

		Det_ReportError(DIO_MODULE_ID, DIO_INSTANCE_ID,
				DIO_READ_PORT_SID, DIO_E_PARAM_INVALID_PORT_ID);
		error = TRUE;
	}
	else
	{
		/* No Action Required */
	}
#endif

	/* In-case there are no errors */
	if(FALSE == error)
	{
		/* Point to the correct PORT register according to the Port Id stored in the Port_Id member */
		switch (Port_Id) {
		case 1:
			output = PINA;
			break;
		case 2:
			output = PINB;
			break;
		case 3:
			output = PINC;
			break;
		case 4:
			output = PIND;
			break;
		}
	}
		return output;
}
